# ai-interview-coach

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  google-genai.py  pyproject.toml  reset_db_version.py
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py  002_create_assessments_table.py  003_create_code_submissions_table.py  004_create_evaluation_rubrics_table.py  005_create_feedback_runs_table.py  006_create_practices_table.py  007_create_messages_table.py  732cad25b9c9_initial_migration_renamed_models.py  83356eac38bd_added_dashboard_related_tables.py  88ad83b58cff_initial_migration.py  9f87c44fc55c_added_dashboard_related_tables.py  a1b2c3d4e5f6_add_ai_feedback_models.py  f8a7552a38da_initial_schema.py
backend/app/: main.py
backend/app/api/: api.py  deps.py
backend/app/common/: __init__.py  exceptions.py  utils.py
backend/app/core/: config.py  cookies.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  oauth.py  security.py
backend/app/crud/: __init__.py  assessment.py  base.py  drill.py  feedback.py  practice.py  rubric.py  session.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  assessment.py  code_submission.py  drawing.py  drill.py  feedback.py  goal.py  interview_session.py  message.py  practice.py  rubric.py  skill.py  user.py
backend/app/modules/: exception_handler.py  router.py
backend/app/repositories/: __init__.py  assessment.py  base.py  feedback.py  practice.py  rubric.py  user.py
backend/app/schemas/: __init__.py  assessment.py  dashboard.py  drill.py  feedback.py  practice.py  rubric.py  session.py  user.py
backend/app/services/: __init__.py  assessment_service.py  assessment_timer.py  code_execution.py  dashboard_service.py  feedback_service.py  interviewer_service.py  llm.py  practice_service.py  prompts.py  transcription.py  user_service.py
backend/scripts/: test_websocket_native.py
backend/tests/: __init__.py  conftest.py
(+173 files in other folders)
